<resources>
    <string name="app_name">MovieDatabase</string>
    <string name="title">Название фильма</string>
    <string name="release_date">20 марта 2021</string>
    <string name="rate">7.5</string>
    <string name="rate_title">Рейтинг:</string>

    <string name="a">Психопат похищает и убивает молодых женщин по всему Среднему Западу Америки.
        ФБР, уверенное в том, что все преступления совершены одним и тем же человеком,
        поручает агенту Клариссе Стерлинг встретиться с заключённым-маньяком,
        который мог бы объяснить следствию психологические мотивы серийного убийцы и тем самым вывести
        на его след.
        Заключённый, доктор психиатрии Ганнибал Лектер, отбывает наказание за убийства и каннибализм.
        Он согласен помочь Клариссе лишь в том случае, если она попотчует его больное воображение
        подробностями своей сложной личной жизни. Такие двусмысленные отношения не только порождают
        в душе Клариссы внутренний конфликт, но и сталкивают её лицом к лицу с помешанным до гениальности убийцей.
        Воплощение дьявола настолько сильно, что ей может не хватить мужества и стойкости, чтобы остановить его…</string>
    <string name="b">Борцы за свободу Нео, Тринити и Морфеус продолжают руководить восстанием людей против Армии Машин.
        Для уничтожения системы репрессий и эксплуатации они вынуждены прибегнуть не только к арсеналу превосходного оружия,
        но и к своим выдающимся навыкам. Участие в миссии по спасению человеческой расы от ее полного
        истребления приносит им более глубокое понимание конструкции Матрицы и осознание центральной роли
        Нео в судьбе человечества.</string>
    <string name="c">Обычный лондонский мальчик Гарри Поттер на 11-м году жизни узнает, что он —
        осиротевший сын двух могущественных волшебников, и сам обладает магической силой.
        В Хогвартской школе чародейства и волшебства Гарри попадает в водоворот невероятных приключений.
        Он изучает квиддич — спорт высшего пилотажа, играет в захватывающую игру живыми шахматными фигурами,
        встречается с Темным Волшебником, который хочет его уничтожить.</string>
    <string name="d">Криминальная сага, повествующая о нью-йоркской сицилийской мафиозной семье Корлеоне.
        Фильм охватывает период 1945-1955 годов. Глава семьи, Дон Вито Корлеоне, выдаёт замуж свою дочь.
        В это время со Второй мировой войны возвращается его любимый сын Майкл. Майкл, герой войны,
        гордость семьи, не выражает желания заняться жестоким семейным бизнесом. Дон Корлеоне ведёт
        дела по старым правилам, но наступают иные времена, и появляются люди, желающие изменить сложившиеся порядки.
        На Дона Корлеоне совершается покушение.</string>

    <string name="aa">Недалекое будущее. На Землю летит красная луна. Столкновение неизбежно.
        Единственная надежда человечества – талантливый астронавт Поль В.Р.
        Но накануне вылета он таинственным образом исчезает…</string>
    <string name="bb">Энтони далеко не молод и живет один в Лондоне, что очень тревожит его дочь.
        Она не хочет оставлять отца без присмотра и пытается найти ему сиделку.
        Энтони отметает все предложенные варианты. Однако, планируя переезд в Париж,
        дочь не спешит сдаваться. Она становится все настойчивее в попытках найти для
        упрямого папочки идеальную женщину.</string>
    <string name="cc">Главный герой – пожарный Алексей, на первый взгляд, совершенно не похож на Героя.
        Отправиться вместе с ним в опасную вылазку вызвались инженер Валерка и военный водолаз Борис.
        Времени на разработку детального плана практически нет. Из-за приближения плавящейся активной зоны,
        вода в резервуаре под реактором с каждым часом нагревается все сильнее.
        Группе предстоит смертельно опасная миссия - спуститься в самое пекло и предотвратить,
        возможно, самый страшный исход катастрофы.</string>
    <string name="dd">Боец смешанных единоборств Коул Янг не раз соглашался проиграть за деньги.
        Он не знает о своем наследии и почему император Внешнего мира Шан Цзун посылает
        могущественного криомансера Саб-Зиро на охоту за Коулом. Янг боится за безопасность своей семьи,
        и майор спецназа Джакс, обладатель такой же отметки в виде дракона, как и у Коула,
        советует ему отправиться на поиски Сони Блейд. Вскоре Коул, Соня и наёмник Кано оказываются
        в храме Лорда Рейдена, Старшего Бога и защитника Земного царства, который дает убежище тем,
        кто носит метку. Здесь прибывшие тренируются с опытными воинами Лю Каном и Кун Лао,
        готовясь противостоять врагам из Внешнего мира, а для этого им нужно раскрыть в себе аркану —
        могущественную силу души.</string>
    <string name="trends_films">В тренде</string>
    <string name="popular_films">Популярные</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster">poster</string>
    <string name="loading">Loading...</string>
    <string name="Error">Error occured</string>
    <string name="MovieList">Списки фильмов</string>
    <string name="reload">Reload</string>
    <string name="latest_movie">Новинка проката</string>
    <string name="nothing">ничего</string>
    <string name="cast">В главных ролях</string>
    <string name="actor">Актер</string>
    <string name="character">в роли</string>

    <string-array name="spinner">
        <item>Популярные</item>
        <item>В тренде</item>
        <item>В прокате</item>
        <item>Скоро в прокате</item>
    </string-array>
</resources>