<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="@dimen/item_width"
    android:layout_height="@dimen/item_height"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="@dimen/item_width"
        android:layout_height="@dimen/item_poster_height"
        android:contentDescription="@string/poster" />

    <TextView
        android:id="@+id/title"
        android:layout_width="@dimen/item_width"
        android:layout_height="@dimen/item_title_height"
        android:layout_marginStart="@dimen/margin"
        android:lines="2"
        android:text="@string/title"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/release_date" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/margin">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            />

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/rate_margin"
            android:text="@string/rate"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
    </LinearLayout>

</LinearLayout>